2004-02-14  Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am: Making sure init.scm is copied to the right 
	  place at install.

2004-02-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: The good old circles revisited. This time Dan
	  noticed that circles with the same start and end point did not 
	  draw properly ie as circles. It became points.

2004-02-08  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Apperently auto* doesn't define $prefix if you
	  don't set it in your script. The autotools has become more and
	  more of a moving target...

	* man/gerbv.1.in: A bunch of updates, mainly reflecting the new
	  features.

2004-02-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Save screen.path even when we load a project file.

	* src/gerbv.c: Fixed a segmentation fault when I tried to free
	  an optarg:ed variable.

2004-02-05  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Dan strikes again. Option -p (with appropriate 
	  error message) added as an alternative to --project.

2004-02-01  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Patch from Dan causes the "save as..." dialog box 
	  to come up if you try to do a "save" with no current project 
	  file name.
	* src/gerbv.c: Yet another patch from Dan to put project filename
	  in title of window.

2003-12-14  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/gerbv.c, src/log.c, src/setup.h: It is now 
	  possible to compile gerbv with GTK+ 2.*, at least tested with
	  2.2.4. There are still some problems, particulary in log.c. 
	  GtkText is deprecated, but I have enabled GTK_ENABLE_BROKEN.
	  This needs a more permanent solution. This closes Feature 
	  Request #771480, but probably opens up some new ones.

2003-12-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Projects saves and restores background color.

	* src/gerbv.c, src/gerbv_screen.h: Added Save Project and handles